<resources>
    <string name="app_name">Github User</string>
    <string name="dicoding_submission">Dicoding Submission</string>
    <string name="author">Created by Akmal M.F</string>
    <string name="search_text">Cari Users Github</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="follows">follows</string>
    <string name="repository">Repository</string>
    <!-- Strings used for fragments for navigation -->

    <string name="favorite">favorite</string>
    <string name="setting">setting</string>
    <string name="logo">logo</string>
    <string name="right_arrow">right arrow</string>
    <string name="dark_mode">Dark Mode</string>
</resources>