<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".view.detail.DetailUserAct">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/navy_900"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageUser"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/github_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/imageUser"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/imageUser"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:text="Akmal Muhamad Firdaus" />

            <TextView
                android:id="@+id/textUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="#B4E4FF"
                android:textSize="14sp"
                tools:text="\@codernebie04" />

            <TextView
                android:id="@+id/textJoined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:text="Joined at 24 June 2015" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/follows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_rectangle_radius_5"
            android:backgroundTint="@color/navy_200"
            android:backgroundTintMode="screen"
            android:orientation="horizontal"
            android:padding="20dp"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageUser"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/followers"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textCountFollowers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    tools:text="23" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/repository"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textCountRepos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    tools:text="23" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/following"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textCountFollowing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    tools:text="23" />
            </LinearLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/headerGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="imageUser,desc,follows" />


        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageUserShimmer"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@color/gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/descShimmer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/imageUserShimmer"
                    android:orientation="vertical"
                    app:layout_constraintStart_toEndOf="@+id/imageUserShimmer"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:height="15dp"
                        android:background="@color/gray"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:height="15dp"
                        android:background="@color/gray"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textJoinedShimmer"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:height="15dp"
                        android:background="@color/gray"
                        android:textColor="@color/white"
                        android:textSize="14sp" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>


        <LinearLayout
            android:id="@+id/followsShimmer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_rectangle_radius_5"
            android:backgroundTint="@color/navy_200"
            android:backgroundTintMode="screen"
            android:orientation="horizontal"
            android:padding="20dp"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shimmerProfile">

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmerFollows"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/followers"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/textCountFollowersShimmer"
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:background="@color/gray"
                            android:textColor="@color/white"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/repository"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/textCountReposShimmer"
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:background="@color/gray"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            tools:text="23" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/following"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/textCountFollowingShimmer"
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:background="@color/gray"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            tools:text="23" />
                    </LinearLayout>

                </LinearLayout>
            </com.facebook.shimmer.ShimmerFrameLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/shimmerGroups"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="followsShimmer,shimmerProfile" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_bg"
        android:contentDescription="@string/follows"
        android:elevation="0dp"
        android:padding="0dp"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/navy_900"
        app:tabIndicatorFullWidth="false"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/navy_900"
        app:tabTextAppearance="@style/TabSettings"
        app:tabTextColor="@color/gray" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/favorite"
        android:src="@drawable/ic_fav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>